Delete Function is working, Update is not working as well.

--- a/service/src/main/resources/static/css/style.css
+++ b/service/src/main/resources/static/css/style.css
@@ -36,3 +36,4 @@ a, u {
 .material-icons.md-24 { font-size: 24px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
+.material-icons.md-64 { font-size: 64px; }
