--- a/service/src/main/resources/templates/clienteForm.html
+++ b/service/src/main/resources/templates/clienteForm.html
@@ -13,7 +13,7 @@
         <header>
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
-                    <span class="navbar-brand mb-0 h1">Sistema de Cobranças</span>
+                    <a href="/" role="button"><span class="navbar-brand mb-0 h1">Sistema de Cobranças</span></a>
                 </div>
             </nav>
         </header>
@@ -36,10 +36,9 @@
                             <button style="padding: 0; margin: 0; border-width:0; background-color: #FFFFFF;" type="submit">
                                 <span class="btn btn-success btn-sm rounded-pill editLink material-icons" style="padding:0.4em">check</span>
                             </button>
-                            <a href="/index" role="button">
+                            <a href="/" role="button">
                                 <span class="btn btn-danger btn-sm rounded-pill editLink material-icons " style="padding:0.4em">close</span>
                             </a>
-                            <!--<button type="submit" class="btn" style="margin-top: 10px;">Cancelar</button>-->
                         </div>
                     </div>
                 </form>
