--- a/service/src/main/resources/templates/clienteFormUpdate.html
+++ b/service/src/main/resources/templates/clienteFormUpdate.html
@@ -19,14 +19,16 @@
         </header>
         <main class="container" style="width: 65%;">
             <div>
-                <form method="post" >
+                <form method="post">
                     <div class="form-group">
+                        <p style="margin: 5px 0;">Id:</p>
+                        <input th:value="${cliente.id}" type="text" class="form-control" name="id" required disabled>
                         <p style="margin: 5px 0;">Nome:</p>
-                        <input type="text" class="form-control" name="nome" placeholder="José Octavio Batista" required>
+                        <input th:value="${cliente.nome}" type="text" class="form-control" name="nome" placeholder="José Octavio Batista" required>
                     </div>
                     <div class="form-group">
                         <p style="margin: 5px 0;">Saldo</p>
-                        <input type="number" class="form-control" step="0.00" value="00.00" name="saldo" placeholder="00,00" required disabled>
+                        <input th:value="${cliente.saldo}" type="number" class="form-control" step="0.00"  name="saldo" placeholder="00,00" required disabled>
                     </div>
                     <div style="display:flex; margin-top: 7px">
                         <div style='margin-left: auto;'>
