--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
                     <a href="/" role="button"><span class="navbar-brand mb-0 h1">Sistema de Cobranças</span></a>
-                    <a href="/newCliente" role="button">
+                    <a th:href="@{/newClienteForm}" role="button">
                         <span class="btn btn-primary btn-sm rounded-pill editLink material-icons btn-adicionar " style="padding:0.4em">person_add</span>
                     </a>
                 </div>
@@ -44,7 +44,7 @@
                                 <a href="#"><span class="btn btn-success btn-sm rounded-pill editLink material-icons" >attach_money</span></a>
                                 <a href="#"><span class="btn btn-secondary btn-sm rounded-pill editLink material-icons" >shopping_cart</span></a>
                                 <a th:href="@{/updateCliente/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-warning btn-sm rounded-pill editLink material-icons" >edit</span></a>
-                                <a th:href="@{/deleteCliente/{idCliente}(idCliente=${cliente.id})}><span class="btn btn-danger btn-sm rounded-pill editLink material-icons" >delete</span></a>
+                                <a th:href="@{/deleteCliente/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-danger btn-sm rounded-pill editLink material-icons" >delete</span></a>
                             </td>
                         </tr>
                     </tbody>
