--- a/service/src/main/resources/templates/extrato.html
+++ b/service/src/main/resources/templates/extrato.html
@@ -39,7 +39,7 @@
                             <td>
 <!--                                <a th:href="@{/updateClientePagamento/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-success btn-sm rounded-pill editLink material-icons" >attach_money</span></a>-->
 <!--                                <a th:href="@{/updateClienteCompra/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-secondary btn-sm rounded-pill editLink material-icons" >shopping_cart</span></a>-->
-<!--                                <a th:href="@{/updateCliente/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-warning btn-sm rounded-pill editLink material-icons" >edit</span></a>-->
+                                <a th:href="@{/{idCliente}/updateCompra/{id}(idCliente=${cliente.id}, id=${extrato.idCompra})}"><span class="btn btn-warning btn-sm rounded-pill editLink material-icons" >edit</span></a>
 <!--                                <a th:href="@{/deleteCliente/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-danger btn-sm rounded-pill editLink material-icons" >delete</span></a>-->
                             </td>
                         </tr>
