--- a/service/src/main/resources/templates/extrato.html
+++ b/service/src/main/resources/templates/extrato.html
@@ -15,6 +15,8 @@
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
                     <a href="/" role="button"><span class="navbar-brand mb-0 h1">Sistema de Cobranças</span></a>
+                    <a th:href="@{/{idCliente}/newCompra/(idCliente=${cliente.id})}"><span class="btn btn-secondary btn-sm rounded-pill editLink material-icons" >shopping_cart</span></a>
+                    <a href="#"><span class="btn btn-success btn-sm rounded-pill editLink material-icons" >attach_money</span></a>
                 </div>
             </nav>
         </header>
@@ -36,11 +38,15 @@
                             <th scope="row" th:text="${extrato.tipo}"></th>
                             <td th:text="${extrato.valor}"></td>
                             <td th:text="${#temporals.format(extrato.data, 'dd/MM/yyyy HH:mm:ss')}"></td>
-                            <td>
-<!--                                <a th:href="@{/updateClientePagamento/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-success btn-sm rounded-pill editLink material-icons" >attach_money</span></a>-->
-<!--                                <a th:href="@{/updateClienteCompra/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-secondary btn-sm rounded-pill editLink material-icons" >shopping_cart</span></a>-->
+                            <td th:if="${extrato.tipo=='compra'}">
+                                <!--If type Compra do it!-->
                                 <a th:href="@{/{idCliente}/updateCompra/{id}(idCliente=${cliente.id}, id=${extrato.idCompra})}"><span class="btn btn-warning btn-sm rounded-pill editLink material-icons" >edit</span></a>
-<!--                                <a th:href="@{/deleteCliente/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-danger btn-sm rounded-pill editLink material-icons" >delete</span></a>-->
+                                <a th:href="@{/{idCliente}/deleteCompra/{id}(idCliente=${cliente.id}, id=${extrato.idCompra})}"><span class="btn btn-danger btn-sm rounded-pill editLink material-icons" >delete</span></a>
+                            </td>
+                            <td th:if="${extrato.tipo=='pagamento'}">
+                                <!--If type Pagamento do it!-->
+                                <a th:href="@{/{idCliente}/updatePagamento/{id}(idCliente=${cliente.id}, id=${extrato.idPagamento})}"><span class="btn btn-warning btn-sm rounded-pill editLink material-icons" >edit</span></a>
+                                <a th:href="@{/{idCliente}/deletePagamento/{id}(idCliente=${cliente.id}, id=${extrato.idPagamento})}"><span class="btn btn-danger btn-sm rounded-pill editLink material-icons" >delete</span></a>
                             </td>
                         </tr>
                     </tbody>
