--- a/service/src/main/resources/templates/vazio.html
+++ b/service/src/main/resources/templates/vazio.html
@@ -24,7 +24,7 @@
                     Seu Banco está vazio! Por favor adicione um cliente!
                 </h1>
 
-                <a href="/newCliente" role="button" class="text-center">
+                <a th:href="@{/newClienteForm}" role="button" class="text-center">
                   <span class="btn btn-primary btn-sm rounded-pill editLink material-icons md-48 btn-adicionar  ">person_add</span>
                 </a>
             </figure>
