--- a/service/src/main/resources/templates/newCompraForm.html
+++ b/service/src/main/resources/templates/newCompraForm.html
@@ -23,7 +23,7 @@
             <input th:field="*{cliente}" type="hidden"/>
             <div class="form-group">
                 <p style="margin: 5px 0;">Valor:</p>
-                <input type="number" th:field="*{valor}" class="form-control" step="0.00" placeholder="00,00" required>
+                <input type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00" max="10000.00" step="0.01" required>
             </div>
             <div class="form-group">
                 <p style="margin: 5px 0;">Descrição:</p>
