--- a/service/src/main/resources/templates/newPagamentoForm.html
+++ b/service/src/main/resources/templates/newPagamentoForm.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Formulario para adicionar uma nova compra</title>
+    <title>Formulario para adicionar um novo pagamento</title>
     <!--CSS-BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!--CSS-ICON GOOGLE-->
@@ -19,17 +19,11 @@
 </header>
 <main class="container" style="width: 65%;">
     <div>
-        <form th:object="${compra}" th:action="@{/saveCompra/}"  method="POST" >
+        <form th:action="@{/savePagamento/}" th:object="${pagamento}" method="POST" >
             <input th:field="*{cliente}" type="hidden"/>
-            <input th:field="*{id}" type="hidden"/>
-            <input type="hidden" th:field="*{data}" />
             <div class="form-group">
                 <p style="margin: 5px 0;">Valor:</p>
-                <input type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00" max="10000.00" step="0.01"  required>
-            </div>
-            <div class="form-group">
-                <p style="margin: 5px 0;">Descrição:</p>
-                <textarea maxlength="50" th:field="*{descricao}" class="form-control" placeholder="Quatro blusas brancas&#10Três casacos" required></textarea>
+                <input type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00" max="10000.00" step="0.01" required>
             </div>
             <div style="display:flex; margin-top: 7px">
                 <div style='margin-left: auto;'>
