--- a/service/src/main/resources/templates/clienteForm.html
+++ b/service/src/main/resources/templates/clienteForm.html
@@ -24,18 +24,26 @@
                         <p style="margin: 5px 0;">Nome:</p>
                         <input type="text" th:field="*{nome}" class="form-control" placeholder="José Octavio Batista" required>
                     </div>
+                    <div class="form-group">
+                        <p style="margin: 5px 0;">Celular:</p>
+                        <input type="text" th:field="*{celular}" class="form-control" data-js="phone" id="celular">
+                    </div>
                     <div style="display:flex; margin-top: 7px">
                         <div style='margin-left: auto;'>
                             <button style="padding: 0; margin: 0; border-width:0; background-color: #FFFFFF;" type="submit">
                                 <span class="btn btn-success btn-sm rounded-pill editLink material-icons" style="padding:0.4em">check</span>
                             </button>
-                            <a href="/" role="button">
-                                <span class="btn btn-danger btn-sm rounded-pill editLink material-icons " style="padding:0.4em">close</span>
-                            </a>
+                            <script>
+                                document.write('<a href="' + document.referrer + '">'+
+                                    '<span class="btn btn-danger btn-sm rounded-pill editLink material-icons "'+
+                                    'style="padding:0.4em">close</span></a>');
+                            </script>
                         </div>
                     </div>
                 </form>
             </div>
         </main>
     </body>
+    <script src="/js/celular.js"></script>
+    <script src="/js/vanilla.js"></script>
 </html>
