--- a/service/src/main/resources/templates/extrato.html
+++ b/service/src/main/resources/templates/extrato.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width"/>
-        <title>Home Page</title>
+        <title>Extrato do Cliente</title>
         <!--CSS-BOOTSTRAP-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
         <!--CSS-ICON GOOGLE-->
@@ -15,8 +15,12 @@
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
                     <a href="/" role="button"><span class="navbar-brand mb-0 h1">Sistema de Cobranças</span></a>
-                    <a th:href="@{/{idCliente}/newCompra/(idCliente=${cliente.id})}"><span class="btn btn-secondary btn-sm rounded-pill editLink material-icons" >shopping_cart</span></a>
-                    <a th:href="@{/{idCliente}/newPagamento/(idCliente=${cliente.id})}"><span class="btn btn-success btn-sm rounded-pill editLink material-icons" >attach_money</span></a>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-item" th:href="@{/{idCliente}/newCompra/(idCliente=${cliente.id})}"><span class="btn btn-secondary btn-sm rounded-pill editLink material-icons" >shopping_cart</span></a>
+                            <a class="nav-item" th:href="@{/{idCliente}/newPagamento/(idCliente=${cliente.id})}"><span class="btn btn-success btn-sm rounded-pill editLink material-icons" >attach_money</span></a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
         </header>
@@ -27,7 +31,7 @@
                     <caption th:text="|Extrato do cliente ${cliente.nome}|"></caption>
                     <thead>
                         <tr>
-                          <th scope="col">#</th>
+                          <th scope="col">Movimentação</th>
                            <th scope="col">Valor</th>
                            <th scope="col">Data e hora</th>
                            <th scope="col"  class="th-lg">Ação</th>
@@ -38,12 +42,12 @@
                             <th scope="row" th:text="${extrato.tipo}"></th>
                             <td th:text="${extrato.valor}"></td>
                             <td th:text="${#temporals.format(extrato.data, 'dd/MM/yyyy HH:mm:ss')}"></td>
-                            <td th:if="${extrato.tipo=='compra'}">
+                            <td th:if="${extrato.tipo=='Compra'}">
                                 <!--If type Compra do it!-->
                                 <a th:href="@{/{idCliente}/updateCompra/{id}(idCliente=${cliente.id}, id=${extrato.idCompra})}"><span class="btn btn-warning btn-sm rounded-pill editLink material-icons" >edit</span></a>
                                 <a th:href="@{/{idCliente}/deleteCompra/{id}(idCliente=${cliente.id}, id=${extrato.idCompra})}"><span class="btn btn-danger btn-sm rounded-pill editLink material-icons" >delete</span></a>
                             </td>
-                            <td th:if="${extrato.tipo=='pagamento'}">
+                            <td th:if="${extrato.tipo=='Pagamento'}">
                                 <!--If type Pagamento do it!-->
                                 <a th:href="@{/{idCliente}/updatePagamento/{id}(idCliente=${cliente.id}, id=${extrato.idPagamento})}"><span class="btn btn-warning btn-sm rounded-pill editLink material-icons" >edit</span></a>
                                 <a th:href="@{/{idCliente}/deletePagamento/{id}(idCliente=${cliente.id}, id=${extrato.idPagamento})}"><span class="btn btn-danger btn-sm rounded-pill editLink material-icons" >delete</span></a>
@@ -51,6 +55,37 @@
                         </tr>
                     </tbody>
                 </table>
+                <nav th:if="${totalPages > 0}" style="margin-right: 0.25em;">
+                    <ul class="pagination justify-content-end">
+                        <li th:if="${(totalPages - firstPage >= 3) && (actualPage > 3)}" class="page-item">
+                            <a class="page-link" th:text="|Primeira|" th:href="@{/listExtrato/{id}/page{firstPage}(id=${cliente.id}, firstPage=${firstPage})}"></a>
+                        </li>
+
+                        <li th:if="${actualPage - 2 >= firstPage}" class="page-item">
+                            <a class="page-link" th:text="|${actualPage - 2}|" th:href="@{/listExtrato/{id}/page{page}(id=${cliente.id}, page=${actualPage - 2})}"></a>
+                        </li>
+
+                        <li th:if="${actualPage - 1 >= firstPage}" class="page-item">
+                            <a class="page-link" th:text="|${actualPage - 1}|" th:href="@{/listExtrato/{id}/page{page}(id=${cliente.id}, page=${actualPage - 1})}"></a>
+                        </li>
+
+                        <li class="page-item active">
+                            <a class="page-link" th:text="|${actualPage}|" th:href="@{/listExtrato/{id}/page{page}(id=${cliente.id}, page=${actualPage})}"></a>
+                        </li>
+
+                        <li th:if="${actualPage + 1 <= totalPages}" class="page-item">
+                            <a class="page-link" th:text="|${actualPage + 1}|" th:href="@{/listExtrato/{id}/page{page}(id=${cliente.id}, page=${actualPage + 1})}"></a>
+                        </li>
+
+                        <li th:if="${actualPage + 2 <= totalPages}" class="page-item">
+                            <a class="page-link" th:text="|${actualPage + 2}|" th:href="@{/listExtrato/{id}/page{page}(id=${cliente.id}, page=${actualPage + 2})}"></a>
+                        </li>
+
+                        <li th:if="${(totalPages - actualPage >= 3) && (actualPage <= totalPages - 3)}" class="page-item">
+                            <a class="page-link" th:text="|Ultima|" th:href="@{/listExtrato/{id}/page{totalPages}(id=${cliente.id}, totalPages=${totalPages})}"></a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
