--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -25,12 +25,13 @@
             <!--TABELA-->
             <div class="table-responsive">
                 <table class="table table-striped table-hover table-bordered text-center align-middle caption-top">
-                    <caption>Lista dos clientes</caption>
+                    <caption>Lista dos Clientes</caption>
                     <thead>
                         <tr>
                           <th scope="col">#</th>
                            <th scope="col">Nome</th>
-                           <th scope="col">Saldo</th>
+                           <th scope="col">Em Aberto</th>
+                           <th scope="col">Contato</th>
                            <th scope="col"  class="th-lg">Ação</th>
                         </tr>
                     </thead>
@@ -39,10 +40,11 @@
                             <th scope="row" th:text="${cliente.id}"></th>
                             <td th:text="${cliente.nome}"></td>
                             <td th:text="${cliente.saldo}"></td>
+                            <td th:if='${cliente.celular != "" }' th:text="${cliente.celular}"></td>
                             <td>
-                                <a th:href="@{/listExtrato/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-success btn-sm rounded-pill editLink material-icons" >view_list</span></a>
                                 <a th:href="@{/{idCliente}/newPagamento/(idCliente=${cliente.id})}"><span class="btn btn-success btn-sm rounded-pill editLink material-icons" >attach_money</span></a>
                                 <a th:href="@{/{idCliente}/newCompra/(idCliente=${cliente.id})}"><span class="btn btn-secondary btn-sm rounded-pill editLink material-icons" >shopping_cart</span></a>
+                                <a th:href="@{/listExtrato/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-success btn-sm rounded-pill editLink material-icons" style="background-color:#3b83bd; border-color:#3b83bd;">receipt</span></a>
                                 <a th:href="@{/updateCliente/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-warning btn-sm rounded-pill editLink material-icons" >edit</span></a>
                                 <a th:href="@{/deleteCliente/{idCliente}(idCliente=${cliente.id})}"><span class="btn btn-danger btn-sm rounded-pill editLink material-icons" >delete</span></a>
                             </td>
@@ -55,11 +57,11 @@
                             <a class="page-link" th:text="|Primeira|" th:href="@{/page{firstPage}(firstPage=${firstPage})}"></a>
                         </li>
 
-                        <li th:if="${actualPage - 2 > firstPage}" class="page-item">
+                        <li th:if="${actualPage - 2 >= firstPage}" class="page-item">
                             <a class="page-link" th:text="|${actualPage - 2}|" th:href="@{/page{page}(page=${actualPage - 2})}"></a>
                         </li>
 
-                        <li th:if="${actualPage - 1 > firstPage}" class="page-item">
+                        <li th:if="${actualPage - 1 >= firstPage}" class="page-item">
                             <a class="page-link" th:text="|${actualPage - 1}|" th:href="@{/page{page}(page=${actualPage - 1})}"></a>
                         </li>
 
@@ -67,15 +69,15 @@
                             <a class="page-link" th:text="|${actualPage}|" th:href="@{/page{actualPage}(actualPage=${actualPage})}"></a>
                         </li>
 
-                        <li th:if="${actualPage + 1 < totalPages}" class="page-item">
+                        <li th:if="${actualPage + 1 <= totalPages}" class="page-item">
                             <a class="page-link" th:text="|${actualPage + 1}|" th:href="@{/page{page}(page=${actualPage + 1})}"></a>
                         </li>
 
-                        <li th:if="${actualPage + 2 < totalPages}" class="page-item">
+                        <li th:if="${actualPage + 2 <= totalPages}" class="page-item">
                             <a class="page-link" th:text="|${actualPage + 2}|" th:href="@{/page{page}(page=${actualPage + 2})}"></a>
                         </li>
 
-                        <li th:if="${(totalPages - actualPage >= 3) && (actualPage < totalPages - 3)}" class="page-item">
+                        <li th:if="${(totalPages - actualPage >= 3) && (actualPage <= totalPages - 3)}" class="page-item">
                             <a class="page-link" th:text="|Ultima|" th:href="@{/page{totalPages}(totalPages=${totalPages})}"></a>
                         </li>
                     </ul>
