--- a/service/src/main/resources/templates/updatePagamentoForm.html
+++ b/service/src/main/resources/templates/updatePagamentoForm.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Formulario para adicionar uma nova compra</title>
+    <title>Formulario para atualizar um novo pagamento</title>
     <!--CSS-BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <!--CSS-ICON GOOGLE-->
@@ -19,7 +19,7 @@
 </header>
 <main class="container" style="width: 65%;">
     <div>
-        <form th:object="${compra}" th:action="@{/saveCompra/}"  method="POST" >
+        <form th:object="${pagamento}" th:action="@{/savePagamento/}"  method="POST" >
             <input th:field="*{cliente}" type="hidden"/>
             <input th:field="*{id}" type="hidden"/>
             <input type="hidden" th:field="*{data}" />
