--- a/service/src/main/resources/templates/vazio.html
+++ b/service/src/main/resources/templates/vazio.html
@@ -14,7 +14,7 @@
         <header>
             <nav class="navbar navbar-light bg-light">
                 <div class="container-fluid">
-                    <a href="/" role="button"><span class="navbar-brand mb-0 h1">Sistema de Cobranças</span></a>
+                    <a href="/" role="button"><span class="navbar-brand mb-0 h1" title="Sistema de Cobranças">Sistema de Cobranças</span></a>
                 </div>
             </nav>
         </header>
@@ -25,7 +25,7 @@
                 </h1>
 
                 <a th:href="@{/newClienteForm}" role="button" class="text-center">
-                  <span class="btn btn-primary btn-sm rounded-pill editLink material-icons md-48 btn-adicionar  ">person_add</span>
+                  <span class="btn btn-primary btn-sm rounded-pill editLink material-icons md-48 btn-adicionar" title="Registrar um novo cliente">person_add</span>
                 </a>
             </figure>
         </main>
