--- a/service/src/main/resources/templates/newPagamentoForm.html
+++ b/service/src/main/resources/templates/newPagamentoForm.html
@@ -8,22 +8,30 @@
     <!--CSS-ICON GOOGLE-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/css/btn.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <header>
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
-            <a href="/" role="button"><span class="navbar-brand mb-0 h1">Sistema de Cobranças</span></a>
+            <a href="/" role="button"><span class="navbar-brand mb-0 h1" title="Sistema de Cobranças">Sistema de Cobranças</span></a>
         </div>
     </nav>
 </header>
 <main class="container" style="width: 65%;">
     <div>
         <form th:action="@{/savePagamento/}" th:object="${pagamento}" method="POST" >
-            <input th:field="*{cliente}" type="hidden"/>
+            <input th:field="*{cliente.id}" type="hidden"/>
             <div class="form-group">
                 <p style="margin: 5px 0;">Valor:</p>
-                <input type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00" max="10000.00" step="0.01" required>
+                <input type="number" th:field="*{valor}" class="form-control" onClick="this.select();" min="1.00" step="0.01" required>
+            </div>
+            <div class="form-group">
+                <p style="margin: 5px 0;">Forma de Pagamento:</p>
+                <span th:each="formaPag : ${T(br.com.bertolotoLucas.sistemaDeCobranca.utils.FormasPagamento).values()}">
+                        <input type="radio" th:field="*{formaPagamento}" th:value="${formaPag}" class="btn-check" autocomplete="off" required>
+                        <label class="btn btn-secondary" th:for="${#ids.prev('formaPagamento')}" th:text="${formaPag.getFormaPagamento()}"></label>
+                </span>
             </div>
             <div style="display:flex; margin-top: 7px">
                 <div style='margin-left: auto;'>
